--- a/index.html
+++ b/index.html
@@ -1,45 +1,163 @@
----
-layout: default
----
 
-## About Me
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+<link rel="shortcut icon" href="myIcon.ico">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<img class="profile-picture" src="sherlock.jpg">
+<meta name="keywords" content="Zhiming Cui, The University of Hong KOng, Computer Vision, Machine, Learning, Medical Image Analysis, Healthcare"> 
+<meta name="description" content="Zhiming Cui is a PhD at HKU.">
+<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
+<link rel="stylesheet" href="jemdoc.css" type="text/css">
+<title>Zhiming Cui Homepage</title>
 
-Hi! I am a junior year student of B.E. Computer Science at Birla Institute of Technology and Science, Pilani.
 
-This is a jekyll based resume template. You can find the full source code on [GitHub](https://github.com/bk2dcradle/researcher)
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-## Research Interest
+  ga('create', 'UA-87320911-1', 'auto');
+  ga('send', 'pageview');
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam finibus ipsum ac erat aliquam dapibus. Vestibulum vehicula placerat ex, a consectetur odio pharetra quis. Mauris id urna ante. Fusce pharetra diam ac nisi aliquet, vel egestas ex iaculis. Pellentesque laoreet cursus tellus sed pellentesque. Praesent a rhoncus elit. Nunc ipsum nisl, consequat sit amet pretium quis, gravida id ipsum.
+</script>
+</head>
+<body>
+  
+<table>
+	<tbody>
+		<tr>
+			<td width="670">
+				<div id="toptitle">					
+					<h1>Lequan Yu</h1><h1>
+				</h1></div>
 
-## Publications
+				<h3>PhD student, The University of Hong Kong</h3>
+				<p>
+					Rm 401, CYC Building<br>
+					Department of Computer Science<br>
+					The University of Hong Kong <br>
+					Hong Kong<br>
+					<br>
+					Email: cuizm.neu.edu [at] gmail [dot] com
+			  <!--
+				</p>
+				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://orcid.org/0000-0002-9315-6527"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://www.researchgate.net/profile/Lequan_Yu"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://twitter.com/ylqzd2011"><img src="./pic/twitter.png" height="30px" style="margin-bottom:-3px"></a>
+					<a href="https://www.linkedin.com/in/lequan-yu-124811a2"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
+				</p>
+        !-->
+			</td>
+			<td>
+				<img src="./pic/zhiming_new_crop.jpeg" border="0" width="200"><br>
+			</td>
+		</tr><tr>
+	</tr></tbody>
+</table>
 
-1. F.Bar, J.Doe: Effects of having a placeholder of a name
-2. S.Holmes, J.Watson: Consequences of living with a sociopath in London
+<h2>Biography</h2>
+<p>
+I am a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, with a passion for working on medical image analysis and exploiting advanced deep learning techniques from big data. I have a broad range of research interests about 3D vision, medical image analysis including instance segmentation, domain adaptation and generalization problems.
+  </p>
 
-## Typography
+<p style="color:red;">
+Remote collaboration is welcome!
+</p>
+	
+	
+<h2>News</h2>
 
-This is a [link](http://google.com). Something *italics* and something **bold**.
 
-Here is a table
+<div style="height: 240px; overflow: auto;">
+<ul>
+	<li>
+		[05/2021] One paper about unsupervised domain adapation was accepeted by TMI.
+	<li>
+		[05/2021] Three papers were early accepted by TMI.
+	</li>
+						
+</ul>
+</div>
+	
+  
+<h2>Publications [<a href="https://scholar.google.com.hk/citations?user=35F6SXoAAAAJ&hl=en">Google Scholar</a>]</h2>
+	<ul>
+		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
+	</ul>
+	<p><font face="Arial" size="4"><b>2021</b></font></p>
+	<ul>
+	<li>
+		<a href="" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
+		Hyunseok Seo, <b>Lequan Yu</b>, Hongyi Ren, Xiaomeng Li, Liyue Shen, Lei Xing.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/document/9411868" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
+		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+	</li>
+	
+</ul>
 
-Year | Award | Category
------|-------|--------
-2014 | Emmy  | Won Outstanding Lead Actor in a miniseries or a movie
-2015 | BAFTA | Nominated for Best Leading Actor for Sherlock
-2014 | Satellite | Won Best Actor miniseries or television film
+<h2>Students</h2>
+	<b>Previous Mentorship:</b>
+	<br>
+	<table style="border-spacing:2px">
+	<tbody>
+	
+	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
+	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (incoming Postdoc at Stanford)</td></tr>
+	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>
+	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
+	
+	</tbody>
+	</table>
+<!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
+	
 
-Here is a horizontal rule
+<h2>Professional Activities</h2>
+<li>	
+	<b>Reviews:</b>
+	<br>
+	IEEE International Conference on Computer Vision (ICCV’21)<br>
+	Medical Image Computing and Computer Assisted Intervention (MICCAI’19-21)<br>
+	Pacific graphics (MIDL’20)<br>
+  IEEE Transactions on Medical Imaging (TMI)<br>
+  Computer Graphics Forum<br>
+	<p style="margin-top:3px"></p>		
+</li>
 
----
+<h2>Teaching</h2>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> 2017-2018</td><td>Fall</td><td>CSCI1130 Artificial Intelligence</td>
+		</tr>
+		<tr>
+			<td> 2018-2021</td><td>Spring</td><td>Machine Learning</td>
+		</tr>
+	</tbody>
+</table>
 
-Here is a blockquote
 
-> To a great mind, nothing is little
+<div id="footer">
+	<div id="footer-text"></div>
+</div>
+	<p><center>
+      	<div id="clustrmaps-widget" style="width:40%">
+      		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=pT8r_ZMBBdBPTv7KnlTCiBDylmHyi1qsWdPpY_tIlqY'></script>
+      		<noscript><a href='https://clustrmaps.com/site/xfn5'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=pT8r_ZMBBdBPTv7KnlTCiBDylmHyi1qsWdPpY_tIlqY'/></a></noscript>
 
-## References
+<!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
+      		<noscript><a href='https://clustrmaps.com/site/1aa2l'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=UexA6kPrFZuJeB69B5BZyS063R_EhdDx6FAwAYiub2U&co=2d78ad&ct=ffffff'/></a></noscript> -->
+	</div>        
+      </center></p>
 
-* Foo Bar: Head of Department, Placeholder Names, Lorem
-* John Doe: Associate Professor, Department of Computer Science, Ipsum
+
+</div>
+</body></html>
