--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Lequan Yu</h1><h1>
+					<h1>Zhiming Cui</h1><h1>
 				</h1></div>
 
 				<h3>PhD student, The University of Hong Kong</h3>
@@ -42,16 +42,6 @@
 					Hong Kong<br>
 					<br>
 					Email: cuizm.neu.edu [at] gmail [dot] com
-			  <!--
-				</p>
-				<p> <a href="https://scholar.google.com/citations?hl=en&user=llXf3wUAAAAJ&view_op=list_works&sortby=pubdate"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://github.com/yulequan"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://orcid.org/0000-0002-9315-6527"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://www.researchgate.net/profile/Lequan_Yu"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://twitter.com/ylqzd2011"><img src="./pic/twitter.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://www.linkedin.com/in/lequan-yu-124811a2"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
-				</p>
-        !-->
 			</td>
 			<td>
 				<img src="./pic/zhiming_new_crop.jpeg" border="0" width="200"><br>
@@ -92,14 +82,10 @@ Remote collaboration is welcome!
 	<p><font face="Arial" size="4"><b>2021</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Deep Neural Network with Consistency Regularization of Multi-Output Channels for Improved Tumor Detection and Delineation</a><br>
-		Hyunseok Seo, <b>Lequan Yu</b>, Hongyi Ren, Xiaomeng Li, Liyue Shen, Lei Xing.<br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+		xxx
 	</li>
 	<li>
-		<a href="https://ieeexplore.ieee.org/document/9411868" target="_blank">Rotation-oriented Collaborative Self-supervised Learning for Retinal Disease Diagnosis</a><br>
-		Xiaomeng Li, Xiaowei Hu, Xiaojuan Qi, <b>Lequan Yu</b>, Wei Zhao, Pheng-Ann Heng, Lei Xing.<br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
+		xxx
 	</li>
 	
 </ul>
