--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
     <style type="text/css">
 	</style>
-    <title>Changjian Li - Homepage</title>
+    <title>Zhiming Cui - Homepage</title>
 	<link rel="shortcut icon" href="./avatar/icon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="./avatar/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./avatar/icon/favicon-32x32.png">
