--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <b><font size="5">PhD student, The University of Hong Kong</font></b>
                         </p>
                         <p>
-                            <a href="http://geometry.cs.ucl.ac.uk/index.php" target="_blank">Computer vision and graphics Group</a><br>
+                            Computer vision and graphics Group<br>
                             The University of Hong Kong
                             <br>
                             <br>
@@ -64,7 +64,9 @@
             xxx
         </p>
         <p>
-            Currently I am interested in Medical Image Analysis, computer vision and 3D vision.
+		I am a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, 
+		with a passion for working on medical image analysis and exploiting advanced deep learning techniques from big data.
+		I have a broad range of research interests about 3D vision, medical image analysis including segmentation, domain adaptation/generalization, and AI in orthodontics problems.
         </p>
 
         <h2>Research Experiences</h2>
