--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 
         <h2>Short Bio</h2>
         <p style="text-align: justify;">
-            xxx
-        </p>
-        <p>
-		I am a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, 
+		I am now a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, 
 		with a passion for working on medical image analysis and exploiting advanced deep learning techniques from big data.
 		I have a broad range of research interests about 3D vision, medical image analysis including segmentation, domain adaptation/generalization, and AI in orthodontics problems.
         </p>
@@ -111,93 +108,36 @@
 		<h2>Reviewer Service</h2>
         <table id="tbReviewer" border="0" width="100%">
             <tbody>
-			    <tr>
-					<td>&nbsp;&nbsp;ACM SIGGRAPH</td>
-					<td>2021</td>
-                </tr>
-                <tr>
-					<td>&nbsp;&nbsp;ACM SIGGRAPH Asia</td>
-					<td>2019, 2020</td>
-                </tr>
-				<tr>
-					<td>&nbsp;&nbsp;Conference on Computer Vision and Pattern Recognition (CVPR)</td>
-					<td>2021</td>
-                </tr>
-				<tr>
-					<td>&nbsp;&nbsp;IEEE Transactions on Visualization & Computer Graphics (TVCG)</td>
-					<td>2020, 2021</td>
-				</tr>
-				<tr>
-					<td>&nbsp;&nbsp;Eurographics (EG)</td>
-					<td>2019</td>
-                </tr>
 				<tr>
 					<td>&nbsp;&nbsp;Computer Graphics Forum (CGF)</td>
-					<td>2019</td>
+					<td>2020</td>
                 </tr>
-                <tr>
-					<td>&nbsp;&nbsp;Journal of Computer Science and Technology (JCST)</td>
-					<td>2019</td>
-				</tr>
 				<tr>
 					<td>&nbsp;&nbsp;Pacific Graphics (PG)</td>
-					<td>2018</td>
+					<td>2020</td>
                 </tr>
 				<tr>
-					<td>&nbsp;&nbsp;Eurographics Symposium on Geometry Processing (SGP)</td>
-					<td>2018</td>
+					<td>&nbsp;&nbsp;IEEE Transactions on Medical Imaging (TMI)</td>
+					<td>2020-2021</td>
                 </tr>
 				<tr>
-					<td>&nbsp;&nbsp;International Conference on Computer-Aided Design and Computer Graphics (CAD&CG)</td>
-					<td>2015</td>
-				</tr>
+					<td>&nbsp;&nbsp;International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</td>
+					<td>2019-2021</td>
+                </tr>		   
 				<tr>
-					<td>&nbsp;&nbsp;Sensors</td>
-					<td>2020</td>
-				</tr>
-				<tr>
-					<td>&nbsp;&nbsp;ACM Symposium on User Interface Software and Technology (UIST)</td>
-					<td>2020</td>
-				</tr>
+					<td>&nbsp;&nbsp;International Conference on Computer Vision (ICCV)</td>
+					<td>2021</td>
+                </tr>			    
+		    
             </tbody>
         </table>
 		
-		<h2>Teaching</h2>
-        <table id="tbTeaching" border="0" width="100%">
-            <tbody>
-				<tr>
-					<td>2020-2021(S2)</td>
-					<td>COMP0119 - Acquisition and Processig of 3D Geometry</td>
-					<td>UCL CS</td>
-                </tr>
-				<tr>
-					<td>2017-2018(S2)</td>
-					<td>COMP2396 - Object Oriented Programming and Java</td>
-					<td>HKU CS</td>
-                </tr>
-				<tr>
-					<td>2016-2017(S1)</td>
-					<td>ENGG1111 - Computer Programming and Applications</td>
-					<td>HKU CS</td>
-                </tr>
-				<tr>
-					<td>2015-2016(S1)</td>
-					<td>COMP7507 - Visualization and Visual Analytics</td>
-					<td>HKU CS</td>
-				</tr>
-                <tr>
-					<td>2014-2015(S1)</td>
-					<td>ENGG1111 - Computer Programming and Applications</td>
-					<td>HKU CS</td>
-                </tr>
-            </tbody>
-        </table>
 		
 		
         <h4>
             <br>
             <div align="center">
-                <b>&copy;Changjian Li.</b>&nbsp Last update: May, 2021.
+                <b>&copy;Zhiming Cui.</b>&nbsp Last update: May, 2021.
             </div
         </h4>
         <!-- <h2> </h2> -->
