--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 
         <h2>Short Bio</h2>
         <p style="text-align: justify;">
-		I am now a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, 
-		with a passion for working on medical image analysis and exploiting advanced deep learning techniques from big data.
-		I have a broad range of research interests about 3D vision, medical image analysis including segmentation, domain adaptation/generalization, and AI in orthodontics problems.
+		I am now a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, supervised by <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>.
+		Before that, I got my B.Eng and M.Eng degrees from Biomedical Engineering in Northeastern University in 2014 and 2017, respectively. 
         </p>
+	<p>
+		My research interests about medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics problems) and 3D vision.
+	</p>
 
         <h2>Research Experiences</h2>
         <table id="tbExperiences" border="0" width="100%">
