--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
 				<tr>
                     <td style="color:red;font-size:120%;">
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#corresponding author<br>
-     
+        
+		    <td>
+                        <pt>ToothNet: Automatic Tooth Instance Segmentation and Identification from Cone Beam CT Images</pt>
+						<br>
+                        <br>
+                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>. &nbsp; IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019. </strong></em><br>
+                        [<a href="./projects/toothSeg/toothNet.html" target="_blank">Project page</a>]&nbsp;
+                        [<a href="./projects/toothSeg/paper/toothNet_CVPR2019.pdf" target="_blank">Paper</a>]&nbsp; </br>
+						<p style="color:red;font-size:60%;">  </p>
+                        <p style="color:red;font-size:100%;"> Our poster session is highlighted in the technical news of IEEE Computer Society: <a href="https://www.computer.org/publications/tech-news/events/ieee-conference-on-computer-vision-and-pattern-recognition-2019-poster-sessions" target="_blank">Poster Sessions Provoke Deep Discussions at the 2019 Conference on CVPR.</a> </p>
+                    </td>
+	
             </tbody>
         </table>
 		
