--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
 		     <td>
                         <pt>ToothNet: Automatic Tooth Instance Segmentation and Identification from Cone Beam CT Images</pt>
                         <br>
-                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>. 
-			<br>
+                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 			&nbsp; IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019. </strong></em><br>
 						<p style="color:red;font-size:60%;">  </p>
                         <p style="color:red;font-size:100%;"> Our poster session is highlighted in the technical news of IEEE Computer Society: <a href="https://www.computer.org/publications/tech-news/events/ieee-conference-on-computer-vision-and-pattern-recognition-2019-poster-sessions" target="_blank">Poster Sessions Provoke Deep Discussions at the 2019 Conference on CVPR.</a> </p>
