--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		     <td>
                         <pt>Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes</pt>
                         <br>
-                        Yang Lei, <a href="https://wenxiliu.github.io/publications/" target="_blank">Wenxi Liu</a>, <strong>Zhiming Cui</strong>, Nenglun Chen, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.
+                        Yang Lei, <a href="https://wenxiliu.github.io/publications/" target="_blank">Wenxi Liu</a>, <strong>Zhiming Cui</strong>, Nenglun Chen, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 		        <br>
 			&nbsp; European Conference on Computer Vision (ECCV), 2020. </strong></em><br>
                     </td>
