--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		     <td>
                         <pt>Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes</pt><br>
                         Yang Lei, <a href="https://wenxiliu.github.io/publications/" target="_blank">Wenxi Liu</a>, <strong>Zhiming Cui</strong>, Nenglun Chen, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
-	                <em>European Conference on Computer Vision (ECCV)</em> (<i><b>TNNLS</b></i>), 2020.</br>
+	                <em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
                     </td>
 	            </tr>
 		    
@@ -114,7 +114,7 @@
                         <pt>ToothNet: Automatic Tooth Instance Segmentation and Identification from Cone Beam CT Images</pt>
                         <br>
                         <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
-			&nbsp; IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019. </strong></em><br>
+	                <em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2019.</br>
 						<p style="color:red;font-size:60%;">  </p>
                         <p style="color:red;font-size:100%;"> Our poster session is highlighted in the technical news of IEEE Computer Society: <a href="https://www.computer.org/publications/tech-news/events/ieee-conference-on-computer-vision-and-pattern-recognition-2019-poster-sessions" target="_blank">Poster Sessions Provoke Deep Discussions at the 2019 Conference on CVPR.</a> </p>
                     </td>
