--- a/index.html
+++ b/index.html
@@ -100,7 +100,16 @@
 
         <table border="0" width="100%">
             <tbody>
-		   
+
+		     <tr>
+		     <td>
+                        <pt>TANet: Towards Fully Automatic Tooth Arrangement</pt><br>
+                        Guodong Wei, <strong>Zhiming Cui</strong>, Yumeng Liu, Nenglun Chen, Runnan Chen, <a href="https://www2.scut.edu.cn/cs_en/2017/0714/c6854a172443/page.htm" target="_blank">Guiqing Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+	                <em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
+                    </td>
+	             <br>
+	            </tr> 
+		    
 		     <tr>
 		     <td>
                         <pt>Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes</pt><br>
