--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
 
 		     <tr>
 		     <td>
+                        <pt>Unsupervised learning of intrinsic structural representation points</pt><br>
+                        Nenglun Chen, <a href="https://lingjie0206.github.io/" target="_blank">Lingjie Liu</a>, <strong>Zhiming Cui</strong>, Runnan Chen, <a href="http://irc.cs.sdu.edu.cn/~chtu/index.html" target="_blank">Changhe Tu</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+	                <em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
+                    </td>
+	             <br>
+	            </tr>
+
+                    <td>
+                        <br>
+                    </td>
+
+		     <tr>
+		     <td>
                         <pt>ToothNet: Automatic Tooth Instance Segmentation and Identification from Cone Beam CT Images</pt>
                         <br>
                         <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
