--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
 
 		     <tr>
 		     <td>
+                        <pt>TSegNet: An efficient and accurate tooth segmentation network on 3D dental model</pt><br>
+                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Nenglun Chen, Guodong Wei, Runnan Chen, <a href="http://www.en.sc.sdu.edu.cn/info/1027/1152.htm" target="_blank">Yuanfeng Zhou</a>, Dinggang Shen, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+	                <em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2020.</br>
+                    </td>
+	            </tr>
+		    
+		     <tr>
+		     <td>
                         <pt>TANet: Towards Fully Automatic Tooth Arrangement</pt><br>
                         Guodong Wei, <strong>Zhiming Cui</strong>, Yumeng Liu, Nenglun Chen, Runnan Chen, <a href="https://www2.scut.edu.cn/cs_en/2017/0714/c6854a172443/page.htm" target="_blank">Guiqing Li</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 	                <em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2020.</br>
