--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
                         <br>
                     </td>
 
+		     <tr>
+		     <td>
+                        <pt>Consistent Segmentation of Longitudinal Brain MR Images with Spatio-Temporal Constrained Networks</pt><br>
+                        Jie Wei, Feng Shi, <strong>Zhiming Cui</strong>, Yongshen Pan, Yong Xia, Dinggang Shen.<br>
+	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+                    </td>
+	            </tr>
+	
+                    <td>
+                        <br>
+                    </td>
+
 	             <tr>
 		     <td>
                         <pt>Structure-Driven Unsupervised Domain Adaptation for Cross-Modality Cardiac Segmentation</pt><br>
