--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		     <tr>
 		     <td>
                         <pt>Confidence-aware Cascaded Network for Fetal Brain Segmentation on MR Images</pt><br>
-                        Xunkun Zhang, <strong>Zhiming Cui</strong>, Jie Wei, Jingjiao Lou, Changan Chen, Wenxin Hu, He Zhang, Tao Zhou, Feng Shi, Dinggang Shen.<br>
+                        Xunkun Zhang, <strong>Zhiming Cui</strong>, Jie Wei, Jingjiao Lou, Changan Chen, Wenxin Hu, He Zhang, Tao Zhou, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, Dinggang Shen.<br>
 	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
                     </td>
 	            </tr>
@@ -115,7 +115,7 @@
 		    <tr>
 		     <td>
                         <pt>VertNet: Accurate Vertebra Localization and Identification Network from CT Images</pt><br>
-                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Yang Lei, Chunfeng Lian, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>, Dijia Wu, Dinggang Shen.<br>
+                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Lei Yang, Chunfeng Lian, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>, Dijia Wu, Dinggang Shen.<br>
 	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
                     </td>
 	            </tr>
@@ -127,7 +127,7 @@
 		     <tr>
 		     <td>
                         <pt>Consistent Segmentation of Longitudinal Brain MR Images with Spatio-Temporal Constrained Networks</pt><br>
-                        Jie Wei, Feng Shi, <strong>Zhiming Cui</strong>, Yongshen Pan, Yong Xia, Dinggang Shen.<br>
+                        Jie Wei, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, <strong>Zhiming Cui</strong>, Yongshen Pan, Yong Xia, Dinggang Shen.<br>
 	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
                     </td>
 	            </tr>
