--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
         <h2>Publications</h2>
         <table border="0" width="100%">
             <tbody>
+		<tr>
+                    <td style="color:red;font-size:120%;">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* indicates equal contribution<br>
+                    </td>
+		</tr>
 		     <tr>
 		     <td>
                         <pt>Confidence-aware Cascaded Network for Fetal Brain Segmentation on MR Images</pt><br>
