--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		     <td>
                         <pt>Hierarchical Morphology-Guided Tooth Instance Segmentation from CBCT Images</pt><br>
                         <strong>Zhiming Cui</strong>, Bojun Zhang, Chunfeng Lian, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Yang Lei, Min Zhu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>, Dinggang Shen.<br>
-	                <em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>MedIA</b></i>), 2021.</br>
+	                <em>Information Processing in Medical Imaging</em> (<i><b>IPMI</b></i>), 2021.</br>
                     </td>
 	            </tr>
 	
@@ -163,7 +163,7 @@
 		     <td>
                         <pt>TSGCNet: Discriminative Geometric Feature Learning with Two-Stream GraphConvolutional Network for 3D Dental Model Segmentation</pt><br>
                         Lingming Zhang, Yue Zhao, <a href="http://www.cs.cmu.edu/~deyum/" target="_blank">Deyu Meng</a>, <strong>Zhiming Cui</strong>, <a href="http://www.cs.cmu.edu/~gaocq/" target="_blank">Chenqiang Gao</a>, Chunfeng Lian, Dinggang Shen.<br>
-	                <em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>MedIA</b></i>), 2021.</br>
+	                <em>IEEE Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2021.</br>
                     </td>
 	            </tr>
 	
