--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <h2>Short Bio</h2>
         <p style="text-align: justify;">
 		I am now a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, supervised by <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>.
-		Before that, I got my B.Eng and M.Eng degrees from Biomedical Engineering in Northeastern University in 2014 and 2017, respectively. 
+		Before that, I got my B.Eng and M.Eng degrees from Biomedical Engineering in Northeastern University in 2014 and 2017, respectively. I have visited <a href="https://www.uii-ai.com/en" target="_blank">UII</a> and ShanghiaTech University during my PhD study, advised by Dinggang Shen.
         </p>
 	<p>
 		My research interests about medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics problems) and 3D vision.
 	</p>
 
-        <h2>Research Experiences</h2>
+        <h2>News</h2>
         <table id="tbExperiences" border="0" width="100%">
             <tbody>
 				<!--<tr>
