--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		Before that, I got my B.Eng and M.Eng degrees from Biomedical Engineering in Northeastern University in 2014 and 2017, respectively. I have visited <a href="https://www.uii-ai.com/en" target="_blank">UII</a> and ShanghiaTech University during my PhD study, advised by Dinggang Shen.
         </p>
 	<p>
-		My research interests about medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics problems) and 3D vision.
+		My research interests include medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics problems) and 3D vision.
 	</p>
 
         <h2>News</h2>
