--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <!--meta data-->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="keywords" content="Zhiming Cui, Zhiming, Homepage, Zhiming Cui - Homepage, The University of Hong Kong, HKU, HKU CS, 崔智铭, medical image analysis, computer vision, sketch, 3D vision">
+    <meta name="keywords" content="Zhiming Cui, The University of Hong Kong, HKU, Medical Image Analysis">
     <meta name="description" content="Zhiming Cui's Homepage">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	
