--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
         <h2>Short Bio</h2>
         <p style="text-align: justify;">
-		I am now a fourth-year Ph.D. student in the computer vision and graphics lab at the University of Hong Kong, supervised by <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>.
-		Before that, I got my B.Eng and M.Eng degrees from Biomedical Engineering in Northeastern University in 2014 and 2017, respectively. I have visited <a href="https://www.uii-ai.com/en" target="_blank">UII</a> and ShanghiaTech University during my PhD study, advised by Dinggang Shen.
+		I am now a Ph.D. candicate in the computer vision and graphics lab at the University of Hong Kong, supervised by <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>.
+		Before that, I got my B.Eng and M.Eng degrees from Northeastern University in 2014 and 2017, respectively. I have visited <a href="https://www.uii-ai.com/en" target="_blank">UII</a> and ShanghaiTech University during my PhD study, advised by Dinggang Shen.
         </p>
 	<p>
-		My research interests include medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics problems) and 3D vision.
+		My research interests include medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics) and 3D vision.
 	</p>
 
         <h2>News</h2>
@@ -129,7 +129,7 @@
 		     <tr>
 		     <td>
                         <pt>Consistent Segmentation of Longitudinal Brain MR Images with Spatio-Temporal Constrained Networks</pt><br>
-                        Jie Wei, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, <strong>Zhiming Cui</strong>, Yongshen Pan, Yong Xia, Dinggang Shen.<br>
+                        Jie Wei, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, <strong>Zhiming Cui</strong>, Yongsheng Pan, Yong Xia, Dinggang Shen.<br>
 	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
                     </td>
 	            </tr>
