--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <br>
                         <br>
                         <p>
-                            <b><font size="5">PhD student, The University of Hong Kong</font></b>
+                            <b><font size="5">PhD candicate, The University of Hong Kong</font></b>
                         </p>
                         <p>
                             Computer vision and graphics Group<br>
