--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
         <h4>
             <br>
             <div align="center">
-      		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=va-L6lHdAAU-pnGRWuo4n-3yc0GsyFLqhzS0NLNX8Lk"></script>
-      		<noscript><a href='https://clustrmaps.com/site/xfn5'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=pT8r_ZMBBdBPTv7KnlTCiBDylmHyi1qsWdPpY_tIlqY'/></a></noscript>
+      		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=AfQwdZlmzVfuTjI1OjYsmoHJIDWoABpGcpzUdRDdBpE&cl=ffffff&w=a"></script>
+		    <br>
                 <b>&copy;Zhiming Cui.</b>&nbsp Last update: May, 2021.
             </div
         </h4>
