--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 		
         <h4>
             <br>
-            <div align="center" style="width:40%">
+            <div id="clustrmaps-widget" style="width:40%">
       		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=AfQwdZlmzVfuTjI1OjYsmoHJIDWoABpGcpzUdRDdBpE&cl=ffffff&w=a"></script>
 		    <br>
                 <b>&copy;Zhiming Cui.</b>&nbsp Last update: May, 2021.
