--- a/index.html
+++ b/index.html
@@ -268,11 +268,13 @@
 		
         <h4>
             <br>
+		<p><center>
             <div id="clustrmaps-widget" style="width:40%">
       		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=AfQwdZlmzVfuTjI1OjYsmoHJIDWoABpGcpzUdRDdBpE&cl=ffffff&w=a"></script>
 		    <br>
                 <b>&copy;Zhiming Cui.</b>&nbsp Last update: May, 2021.
-            </div
+			</div>
+			</center></p>
         </h4>
         <!-- <h2> </h2> -->
         <!-- <a href="http://www.easycounter.com/"> -->
