--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		     <tr>
 		     <td>
                         <pt>Confidence-aware Cascaded Network for Fetal Brain Segmentation on MR Images</pt><br>
-                        Xunkun Zhang, <strong>Zhiming Cui</strong>, Jie Wei, Jingjiao Lou, Changan Chen, Wenxin Hu, He Zhang, Tao Zhou, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, Dinggang Shen.<br>
+                        Xukun Zhang, <strong>Zhiming Cui</strong>, Jie Wei, Jingjiao Lou, Changan Chen, Wenxin Hu, He Zhang, Tao Zhou, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, Dinggang Shen.<br>
 	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
                     </td>
 	            </tr>
