--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h2>News</h2>
 	<li>
-		[05/2021] Three papers are early accepted by MICCAI 2021.
+		[06/2021] Five papers are finally accepted by MICCAI 2021.
 	</li>
 	    
             <tbody>
@@ -104,8 +104,32 @@
             <tbody>
 		     <tr>
 		     <td>
+                        <pt>Domain Generalization for Mammography Detection via Multi-style and Multi-view Contrastive Learning</pt><br>
+                        Zheren Li, <strong>Zhiming Cui*</strong>, Sheng Wang, Yuji Qi, Ouyang Xi, Yuezhi Yang, Jiezhi Cheng.<br>
+	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+                    </td>
+	            </tr>
+	
+                    <td>
+                        <br>
+                    </td>
+
+		     <tr>
+		     <td>
+                        <pt>Motion Correction for Liver DCE-MRI with Time-Intensity Curve Constraint</pt><br>
+                        Yuhang Sun, Dongming Wei, <strong>Zhiming Cui</strong>, YUjia Zhou, Caiwen Jiang, Jiameng Liu, Qianjin Feng, Dinggang Shen.<br>
+	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
+                    </td>
+	            </tr>
+	
+                    <td>
+                        <br>
+                    </td>
+
+		    <tr>
+		     <td>
                         <pt>Confidence-aware Cascaded Network for Fetal Brain Segmentation on MR Images</pt><br>
-                        Xukun Zhang, <strong>Zhiming Cui</strong>, Jie Wei, Jingjiao Lou, Changan Chen, Wenxin Hu, He Zhang, Tao Zhou, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, Dinggang Shen.<br>
+                        Xukun Zhang, <strong>Zhiming Cui*</strong>, Jie Wei, Jingjiao Lou, Changan Chen, Wenxin Hu, He Zhang, Tao Zhou, <a href="https://www.linkedin.com/in/feng-shi-62228234" target="_blank">Feng Shi</a>, Dinggang Shen.<br>
 	                <em>International Conference on Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2021.</br>
                     </td>
 	            </tr>
@@ -236,6 +260,7 @@
 	
             </tbody>
         </table>
+        * indicates equal contribution.
 		
 		<h2>Reviewer Service</h2>
         <table id="tbReviewer" border="0" width="100%">
