--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	             <tr>
 		     <td>
                         <pt>Structure-Driven Unsupervised Domain Adaptation for Cross-Modality Cardiac Segmentation</pt><br>
-                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Nenglun Chen, Guodong Wei, Runnan Chen, Lei Yang, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+                        <strong>Zhiming Cui</strong>, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Nenglun Chen, Guodong Wei, Runnan Chen, Lei Yang, Dinggang Shen, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 	                <em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2021.</br>
                     </td>
 	            </tr>
