--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <h2>News</h2>
 	<li>
 		[06/2021] Five papers are finally accepted by MICCAI 2021.
+		[07/2021] One paper is finally accepted by CAGD.
 	</li>
 	    
             <tbody>
@@ -103,6 +104,18 @@
         <table border="0" width="100%">
             <tbody>
 		     <tr>
+		     <td>
+                        <pt>Self-Attention Implicit Function Networks for 3D Dental Data Completion</pt><br>
+                        Yuhan Ping, Guodong Wei, Lei Yang, <strong>Zhiming Cui*</strong>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2021.</br>
+                    </td>
+	            </tr>
+	
+                    <td>
+                        <br>
+                    </td>
+	
+		    <tr>
 		     <td>
                         <pt>Domain Generalization for Mammography Detection via Multi-style and Multi-view Contrastive Learning</pt><br>
                         Zheren Li*, <strong>Zhiming Cui*</strong>, Sheng Wang, Yuji Qi, Ouyang Xi, Yuezhi Yang, Jiezhi Cheng.<br>
