--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h2>News</h2>
 	<li>
-		[06/2021] Five papers are finally accepted by MICCAI 2021.
+		[06/2021] Five papers are finally accepted by MICCAI 2021. <br>
 		[07/2021] One paper is finally accepted by CAGD.
 	</li>
 	    
@@ -106,7 +106,7 @@
 		     <tr>
 		     <td>
                         <pt>Self-Attention Implicit Function Networks for 3D Dental Data Completion</pt><br>
-                        Yuhan Ping, Guodong Wei, Lei Yang, <strong>Zhiming Cui*</strong>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+                        Yuhan Ping, Guodong Wei, Lei Yang, <strong>Zhiming Cui</strong>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2021.</br>
                     </td>
 	            </tr>
