--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
         <h2>News</h2>
 	<li>
-		[06/2021] Five papers are finally accepted by MICCAI 2021. <br>
+		[06/2021] Five papers are finally accepted by MICCAI 2021.
+	</li>
+	<li>
 		[07/2021] One paper is finally accepted by CAGD.
 	</li>
 	    
