--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h2>News</h2>
 	<li>
-		[07/2021] One paper is finally accepted by CAGD.
+		[07/2021] One paper is accepted by CAGD.
 	</li>
 	<li>
 		[06/2021] Five papers are finally accepted by MICCAI 2021.
