--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 
         <h2>News</h2>
 	<li>
+		[09/2021] Four paper are accepted by MICCAI workshop (MLMI).
+	</li>
+	<li>
 		[07/2021] One paper is accepted by CAGD.
 	</li>
 	<li>
