--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 		     <td>
                         <pt>Hierarchical Morphology-Guided Tooth Instance Segmentation from CBCT Images</pt><br>
                         <strong>Zhiming Cui</strong>, Bojun Zhang, Chunfeng Lian, <a href="https://enigma-li.github.io/" target="_blank">Changjian Li</a>, Yang Lei, Min Zhu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>, Dinggang Shen.<br>
-	                <em>Information Processing in Medical Imaging</em> (<i><b>IPMI</b></i>), 2021.</br>
+	                <em>Information Processing in Medical Imaging</em> (<i><b>IPMI Oral</b></i>), 2021.</br>
                     </td>
 	            </tr>
 	
