--- a/index.html
+++ b/index.html
@@ -292,6 +292,14 @@
 					<td>2020</td>
                 </tr>
 				<tr>
+					<td>&nbsp;&nbsp;IEEE Transactions on Visualization and Computer Graphics (TVCG)</td>
+					<td>2021</td>
+                </tr>
+				<tr>
+					<td>&nbsp;&nbsp;IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</td>
+					<td>2022</td>
+                </tr>   
+				<tr>
 					<td>&nbsp;&nbsp;IEEE Transactions on Medical Imaging (TMI)</td>
 					<td>2020-2021</td>
                 </tr>
