--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 
         <h2>News</h2>
 	<li>
+		[02/2022] One paper is accepted by Nature Communications.
+	</li>
+	<li>
 		[09/2021] Four papers are accepted by MICCAI workshop (MLMI).
 	</li>
 	<li>
