--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
             <tbody>
 		     <tr>
 		     <td>
+                        <pt>Dense Representative Tooth Landmark/axis Detection Network on 3D Model</pt><br>
+                        Guangshun Wei, Zhiming Cui, Jie Zhu, Lei Yang, Yuanfeng Zhou, P Singh, Min Gu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2021.</br>
+                    </td>
+	            </tr>
+	
+                    <td>
+                        <br>
+                    </td>
+		    
+		     <tr>
+		     <td>
                         <pt>Self-Attention Implicit Function Networks for 3D Dental Data Completion</pt><br>
                         Yuhan Ping, Guodong Wei, Lei Yang, <strong>Zhiming Cui</strong>, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2021.</br>
