--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		     <tr>
 		     <td>
                         <pt>Dense Representative Tooth Landmark/axis Detection Network on 3D Model</pt><br>
-                        Guangshun Wei, <strong>Zhiming Cui<strong>, Jie Zhu, Lei Yang, Yuanfeng Zhou, P Singh, Min Gu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
+                        Guangshun Wei, <strong>Zhiming Cui</strong>, Jie Zhu, Lei Yang, Yuanfeng Zhou, P Singh, Min Gu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
 	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2021.</br>
                     </td>
 	            </tr>
