--- a/index.html
+++ b/index.html
@@ -111,7 +111,20 @@
         <h2>Publications</h2>
         <table border="0" width="100%">
             <tbody>
-		     <tr>
+
+		   <tr>
+		     <td>
+                        <pt>A fully automatic AI system for tooth and alveolar bone segmentation from cone-beam CT images</pt><br>
+                        <strong>Zhiming Cui</strong>, Yu Fang, Lanzhuju Mei, Bojun Zhang, Bo Yu, Jiameng Liu, Caiwen Jiang, Yuhang Sun, Lei Ma, Jiawei Huang, Yang Liu, Yue Zhao, Chunfeng Lian, Zhongxiang Ding, Min Zhu, and Dinggang Shen.<br>
+	                <em>Nature Communications</em> (<i><b>CAGD</b></i>), 2021.</br>
+                    </td>
+	            </tr>
+	
+                    <td>
+                        <br>
+                    </td>
+		    
+		    <tr>
 		     <td>
                         <pt>Dense Representative Tooth Landmark/axis Detection Network on 3D Model</pt><br>
                         Guangshun Wei, <strong>Zhiming Cui</strong>, Jie Zhu, Lei Yang, Yuanfeng Zhou, P Singh, Min Gu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
