--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		     <td>
                         <pt>A fully automatic AI system for tooth and alveolar bone segmentation from cone-beam CT images</pt><br>
                         <strong>Zhiming Cui</strong>, Yu Fang, Lanzhuju Mei, Bojun Zhang, Bo Yu, Jiameng Liu, Caiwen Jiang, Yuhang Sun, Lei Ma, Jiawei Huang, Yang Liu, Yue Zhao, Chunfeng Lian, Zhongxiang Ding, Min Zhu, and Dinggang Shen.<br>
-	                <em>Nature Communications</em> (<i><b>CAGD</b></i>), 2021.</br>
+	                <em>Nature Communications</em>, 2022.</br>
                     </td>
 	            </tr>
 	
@@ -128,7 +128,7 @@
 		     <td>
                         <pt>Dense Representative Tooth Landmark/axis Detection Network on 3D Model</pt><br>
                         Guangshun Wei, <strong>Zhiming Cui</strong>, Jie Zhu, Lei Yang, Yuanfeng Zhou, P Singh, Min Gu, <a href="http://i.cs.hku.hk/~wenping/" target="_blank">Wenping Wang</a>.<br>
-	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2021.</br>
+	                <em>Computer Aided Geometric Design</em> (<i><b>CAGD</b></i>), 2022.</br>
                     </td>
 	            </tr>
 	
