--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		Before that, I got my B.Eng and M.Eng degrees from Northeastern University in 2014 and 2017, respectively. I have visited <a href="https://www.uii-ai.com/en" target="_blank">UII</a> and ShanghaiTech University during my PhD study, advised by Dinggang Shen.
         </p>
 	<p>
-		My research interests include medical image analysis (segmentation, domain adaptation/generalization, and AI in orthodontics) and 3D vision.
+		My research interest is medical image analysis, including multi-modality/center learning, implicit function learning and AI in digital dentistry.
 	</p>
 
         <h2>News</h2>
