--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 
         <h2>News</h2>
 	<li>
+		[06/2022] Four papers are accepted by MICCAI 2022.
+	</li>
+	<li>
 		[02/2022] One paper is accepted by Nature Communications.
 	</li>
 	<li>
-		[09/2021] Four papers are accepted by MICCAI workshop (MLMI).
-	</li>
-	<li>
-		[07/2021] One paper is accepted by CAGD.
+		[07/2021] Two papers are accepted by CAGD.
 	</li>
 	<li>
 		[06/2021] Five papers are finally accepted by MICCAI 2021.
