--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 
         <h2>News</h2>
 	<li>
+		[06/2022] I finish my PhD defense and become a Dr.
+	</li>
+	<li>
 		[06/2022] Four papers are accepted by MICCAI 2022.
 	</li>
 	<li>
