--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <h2>Short Bio</h2>
         <p style="text-align: justify;">
-		I am now a Ph.D. candicate in the computer vision and graphics lab at the University of Hong Kong, supervised by <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>.
+		I have received my a Ph.D. degree in the computer vision and graphics lab at the University of Hong Kong, supervised by <a href="https://www.cs.hku.hk/people/academic-staff/wenping" target="_blank">Wenping Wang</a>.
 		Before that, I got my B.Eng and M.Eng degrees from Northeastern University in 2014 and 2017, respectively. I have visited <a href="https://www.uii-ai.com/en" target="_blank">UII</a> and ShanghaiTech University during my PhD study, advised by Dinggang Shen.
         </p>
 	<p>
