--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h2>News</h2>
 	<li>
-		[06/2022] I finish my PhD defense and become a Dr.
+		[06/2022] I have passed the PhD defense and became a Dr.!
 	</li>
 	<li>
 		[06/2022] Four papers are accepted by MICCAI 2022.
